# LLM_Tool

./: .gitignore  ANNOTATION_COLUMN_DETECTION_IMPROVEMENT.md  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_INDEX.md  ARCHITECTURE_QUICK_SUMMARY.md  BENCHMARK_MODE_IMPLEMENTATION.md  CHANGELOG.md  CONTRIBUTING.md  CSV_FIX_SUMMARY.md  EPOCH_DISPLAY_FIX_SUMMARY.md  FIX_SUMMARY_EPOCH_CONFIG.md  LOGS_RESTRUCTURING.md  MANIFEST.in  MULTICLASS_TRAINING_FIX.md  Makefile  QUICK_FIX_REFERENCE.md  README.md  README_SYSTEM_RESOURCES.md  TRAINING_DISPLAY_FIXES.md  TRAINING_SAVE_RESUME.md  TRAINING_UX_FIXES.md  TRAIN_TEST_VALIDATION_SPLIT_PLAN.md  install.sh  language_snippet.txt  modif.txt  pyproject.toml  requirements.txt  setup.py  setup.py.backup  temp_db_annotated_20251005_160832.csv  temp_db_input_20251005_160832.csv  test_flow_logic.py  test_rich_display.py  test_with_prompt.py  verify_csv_fixes.py  verify_installation.py
data/: .gitkeep  AI_catégo_pour_antoine_phrases copy.csv  AI_catégo_pour_antoine_phrases.csv  test_annotations_prompt.json  test_data.csv
data/sets/: extra_large.csv  small_and_large_set.csv
data/sets/LLMs_set/: small_and_large_gpt-4.1.csv
data/sets/final_test_set/: final_test.csv
data/sets/manual/: manual_training_set.csv
data/training_data/: category_Agriculture_20251006_134815.csv  category_Civil_Rights_20251006_134435.csv  category_Culture_20251006_134815.csv  category_Defense_20251006_134435.csv  category_Domestic_Commerce_20251006_134815.csv  category_Education_20251006_134815.csv  category_Energy_20251006_134435.csv  category_Environment_20251006_134435.csv  category_Foreign_Trade_20251006_134435.csv  category_Government_Operations_20251006_134435.csv  category_Health_20251006_134435.csv  category_Housing_20251006_134435.csv  category_Immigration_20251006_134815.csv  category_International_Affairs_20251006_134815.csv  category_Labor_20251006_134815.csv  category_Law_and_Crime_20251006_134815.csv  category_Macroeconomics_20251006_134435.csv  category_Public_Lands_20251006_134435.csv  category_Social_Welfare_20251006_134815.csv  category_Technology_20251006_134815.csv  category_Transportation_20251006_134815.csv  multiclass_sentiment_20251007_111959.jsonl  multiclass_sentiment_long_20251007_115814.jsonl  multiclass_sentiment_simple_20251007_122706.jsonl  multiclass_specific_themes_20251007_120057.jsonl  multiclass_specific_themes_long_20251007_120715.jsonl  multiclass_specific_themes_simple_20251007_120715.jsonl  multilabel_all_keys_20251007_123308.jsonl  multilabel_dataset_20251003_163448.jsonl  multilabel_dataset_20251006_110835.jsonl  multilabel_dataset_20251006_135039.jsonl  multilabel_dataset_20251006_150733.jsonl  multilabel_one_vs_all_20251006_134435.jsonl  onevsall_keys_20251007_123308.jsonl  onevsall_keys_20251007_141818.jsonl  single_label_20251005_142422.csv  single_label_20251006_141955.csv  singlelabel_dataset_20251006_223151.jsonl  temp_benchmark_Health.csv  training_multilabel_20251005_004642.jsonl
docs/: API_KEY_MANAGEMENT.md  CRITICAL_FIX_label_filtering_sample_deletion.md  SYSTEM_RESOURCES.md  VALIDATION_FIX_SUMMARY.md  fix_insufficient_labels_detection.md  label_filtering_fix_diagram.txt  modes_reference.md  social_science_wizard_guide.md  training_arena_metadata_persistence.md  training_arena_session_relaunch_fix.md  training_arena_summary_files.md  validation_fix_diagram.txt  validation_fix_report.md  wizard_example_outputs.md
examples/: README.md  quickstart_annotation.py  quickstart_training.py  system_resources_demo.py
llm_tool/: __init__.py  __main__.py
llm_tool/annotators/: __init__.py  api_clients.py  json_cleaner.py  llm_annotator.py  local_models.py  prompt_manager.py  prompt_wizard.py  prompt_wizard_backup.py
llm_tool/cli/: __init__.py  advanced_cli.py  advanced_cli.py.backup  advanced_cli_backup.py  advanced_cli_cleaned.py  annotation_workflow.new  annotation_workflow.py  banners.py  bert_annotation_studio.py  data_detector.py  main_cli.py  training_arena_integrated 2.py  training_arena_integrated.py  training_arena_module.py  validation_lab.py
llm_tool/config/: __init__.py  api_key_manager.py  settings.py
llm_tool/database/: __init__.py  file_handlers.py  postgresql_handler.py
llm_tool/exporters/: __init__.py
llm_tool/pipelines/: __init__.py  enhanced_pipeline_wrapper.py  pipeline_controller.py
llm_tool/trainers/: __init__.py  benchmark_dataset_builder.py  benchmarking.py  bert_abc.py  bert_base.py  bert_base_enhanced.py  cli.py  data_splitter.py  data_utils.py  dataset_builder.py  logging_utils.py  model_selector.py  model_trainer.py  models.py  multi_label_trainer.py  multilingual_selector.py  parallel_inference.py  reinforced_params.py  sota_models.py  training_data_builder.py
llm_tool/utils/: __init__.py  annotation_session_manager.py  annotation_to_training.py  benchmark_helpers.py  benchmark_utils.py  cost_estimator.py  data_detector.py  data_filter_logger.py  data_splitter.py  language_detector.py  language_filtering.py  language_normalizer.py  logging_utils.py  metadata_manager.py  model_display.py  model_metrics.py  resource_display.py  rich_progress_manager.py  session_summary.py  system_resources.py  token_analysis.py  training_data_utils.py  training_paths.py  training_summary_generator.py
llm_tool/validators/: __init__.py  annotation_validator.py  doccano_exporter.py
prompts/: .gitkeep  YOUPOL.txt  YOUPOL_3.txt  YOUPOL_4.txt  prompt_EN.txt  prompt_EN_long.txt  prompt_EN_simple.txt  prompt_auth.txt  prompt_econ.txt  prompt_eth.txt  prompt_reg.txt  prompt_sec.txt  prompt_tech.txt
tests/: test_annotation.py  test_annotation_pipeline.py  test_llm_annotator_identifier.py  test_pipeline.py  test_training_data_builder.py  test_with_prompt.py
validation/: .gitkeep
validation/TEST_20251015_144044/doccano/: gemma_doccano_20251015_144124.jsonl
validation/TEST_20251015_152904/doccano/: gemma_doccano_20251015_152941.jsonl
validation/YOUPOL_20251016_164839/: all.jsonl  all_2.jsonl  all_3.jsonl  all_4.jsonl
validation/annotator_session_20251016_083014_4cde/: all.jsonl
(+5 files in other folders)
