[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-tool"
version = "1.0.0"
description = "State-of-the-Art LLM-Powered Annotation & BERT Training Pipeline for Multilingual Text Classification"
readme = "README.md"
authors = [
    {name = "Antoine Lemor"},
]
license = "MIT"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Text Processing :: General",
    "Environment :: Console",
    "Natural Language :: English",
    "Natural Language :: French",
    "Natural Language :: Spanish",
    "Natural Language :: German",
    "Natural Language :: Chinese (Simplified)",
    "Natural Language :: Arabic",
    "Framework :: Jupyter",
]
keywords = [
    "llm",
    "annotation",
    "machine-learning",
    "natural-language-processing",
    "transformers",
    "bert",
    "gpt",
    "training",
    "benchmarking",
    "multilingual",
    "ai",
    "deep-learning",
    "data-annotation",
    "model-training",
    "deberta",
    "roberta",
    "electra",
    "albert",
    "xlm-roberta",
    "camembert",
    "longformer",
    "openai",
    "claude",
    "anthropic",
    "gemini",
    "ollama",
    "local-llm",
    "text-classification",
    "sequence-classification",
    "multi-label-classification",
    "social-science",
    "research-tool",
    "annotation-tool",
    "language-detection",
    "multilingual-nlp",
    "pytorch",
    "huggingface",
    "transformer-models",
    "pipeline",
    "cli-tool",
    "interactive-cli",
    "model-benchmarking",
    "prompt-engineering",
]
dependencies = [
    # Data manipulation
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
    "pyarrow>=18.1.0,<19.0.0",
    "pyreadr>=0.5.0",
    # Database
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    # JSON and data validation
    "pydantic>=2.0.0",
    "jsonschema>=4.0.0",
    # CLI and interface
    "rich>=14.0.0",
    "tqdm>=4.65.0",
    "inquirer>=3.0.0",
    # Language detection
    "lingua-language-detector>=2.0.0",
    # Logging
    "loguru>=0.7.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "click>=8.0.0",
    "requests>=2.28.0",
    "pyyaml>=6.0.0",
    "python-dateutil>=2.8.0",
    "cryptography>=41.0.0",
    "tabulate>=0.9.0",
    # LLM and AI
    "openai>=1.0.0",
    "ollama>=0.6.0",
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "accelerate>=1.0.0",
    "sentencepiece>=0.2.0",
    "protobuf>=3.20.0",
    "safetensors>=0.6.0",
    "tokenizers>=0.20.0",
    # Training
    "datasets>=4.0.0",
    "evaluate>=0.4.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.14.0",
    "nltk>=3.8.0",
    "sacremoses>=0.1.0",
]

[project.optional-dependencies]
advanced = [
    # Additional LLM providers
    "anthropic>=0.18.0",
    "google-generativeai>=0.3.0",
    "llama-cpp-python>=0.2.0",
    # Annotation platforms
    "label-studio>=1.20.0",
    "label-studio-sdk>=2.0.0",
    # Alternative language detection
    "langdetect>=1.0.9",
    "fasttext>=0.9.2",
    "fasttext-wheel>=0.9.2",
    # Advanced ML features
    "sentence-transformers>=2.2.0",
    "imbalanced-learn>=0.11.0",
    # Visualization
    "seaborn>=0.12.0",
    "matplotlib>=3.6.0",
    # Optimization
    "optuna>=3.3.0",
    # MLOps
    "mlflow>=2.8.0",
    "wandb>=0.15.0",
    "tensorboard>=2.13.0",
    # Web serving
    "fastapi>=0.103.0",
    "uvicorn>=0.23.0",
    "gradio>=3.45.0",
    # Databases
    "redis>=5.0.0",
    "pymongo>=4.5.0",
    # Distributed computing
    "ray>=2.6.0",
    "dask[complete]>=2023.8.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "isort>=5.12.0",
    "pre-commit>=3.3.0",
    "ipykernel>=6.25.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
]
all = [
    # Additional LLM providers
    "anthropic>=0.18.0",
    "google-generativeai>=0.3.0",
    "llama-cpp-python>=0.2.0",
    # Annotation platforms
    "label-studio>=1.20.0",
    "label-studio-sdk>=2.0.0",
    # Alternative language detection
    "langdetect>=1.0.9",
    "fasttext>=0.9.2",
    "fasttext-wheel>=0.9.2",
    # Advanced ML features
    "sentence-transformers>=2.2.0",
    "imbalanced-learn>=0.11.0",
    # Visualization
    "seaborn>=0.12.0",
    "matplotlib>=3.6.0",
    # Optimization
    "optuna>=3.3.0",
    # MLOps
    "mlflow>=2.8.0",
    "wandb>=0.15.0",
    "tensorboard>=2.13.0",
    # Web serving
    "fastapi>=0.103.0",
    "uvicorn>=0.23.0",
    "gradio>=3.45.0",
    # Databases
    "redis>=5.0.0",
    "pymongo>=4.5.0",
    # Distributed computing
    "ray>=2.6.0",
    "dask[complete]>=2023.8.0",
    # Development tools
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "isort>=5.12.0",
    "pre-commit>=3.3.0",
    "ipykernel>=6.25.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
]

[project.scripts]
llm-tool = "llm_tool.__main__:main"
llmtool = "llm_tool.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["llm_tool*"]

[tool.setuptools.package-data]
llm_tool = [
    "data/*.json",
    "data/*.jsonl",
    "prompts/*.txt",
    "prompts/*.json",
    "configs/*.yaml",
    "configs/*.json",
    "docs/*.md",
]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
